--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 
 <head>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/echarts/5.3.3/echarts.min.js"></script>
+  <title>是谁还在买</title>
 </head>
 
-<body>
+<body style="overflow-x: hidden;">
   <div id="main" style="width: 100%; height:100%;"></div>
   <div id="list" style="margin-top: 8px;">
 
@@ -34,7 +35,7 @@
       for (let game of gameList) {
         var img = document.createElement('img');
         img.src = db.games[game].logo_url;
-        img.style.width = '16.66%';
+        img.style.width = '16.666%';
         listDom.appendChild(img);
       }
 
